[gd_scene load_steps=15 format=3 uid="uid://b5vqnuwfq08g2"]

[ext_resource type="Script" path="res://Game/Board.gd" id="1_t8jgb"]
[ext_resource type="Shader" path="res://Game/Board.gdshader" id="2_tlv7i"]
[ext_resource type="Script" path="res://Game/FightGrid.gd" id="3_fdc7p"]
[ext_resource type="Script" path="res://Game/GameInterface.gd" id="3_m7ngt"]
[ext_resource type="Texture2D" uid="uid://bjommwwxv5cn8" path="res://Backgrounds/e4fd3fbedcbf588f.jpeg" id="4_nn24c"]
[ext_resource type="Script" path="res://Game/Background.gd" id="5_u1twk"]
[ext_resource type="Texture2D" uid="uid://cskfwe8hpjumn" path="res://Game/Cards/CardImg/Sleves/3ade428a30393797.jpeg" id="6_wm1d8"]
[ext_resource type="Texture2D" uid="uid://ml2hxjhhs3fk" path="res://Game/Cards/CardImg/Sleves/5ff7e8f0aeac9f63.jpeg" id="7_1mt67"]
[ext_resource type="Texture2D" uid="uid://didndli547bte" path="res://Game/Cards/CardImg/Sleves/061cff9fc288a51c.jpeg" id="8_l1ahq"]
[ext_resource type="Texture2D" uid="uid://br6rxy1oij1au" path="res://Game/Cards/CardImg/Sleves/85e023b82fe79faa.jpeg" id="9_o7a7x"]
[ext_resource type="Texture2D" uid="uid://c5w60aesxt20i" path="res://Game/Cards/CardImg/Sleves/9e55b7a2b58ca909.jpeg" id="10_bkto2"]
[ext_resource type="Texture2D" uid="uid://da8oro75d53ra" path="res://Game/Cards/CardImg/Sleves/30327f4258f19695.jpeg" id="11_dkmyy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u425y"]
shader = ExtResource("2_tlv7i")
shader_parameter/mask_softness = 1.4
shader_parameter/mask_threshold = 0.6
shader_parameter/sort = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_0mdo0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_wm1d8")
}, {
"duration": 1.0,
"texture": ExtResource("7_1mt67")
}, {
"duration": 1.0,
"texture": ExtResource("8_l1ahq")
}, {
"duration": 1.0,
"texture": ExtResource("9_o7a7x")
}, {
"duration": 1.0,
"texture": ExtResource("10_bkto2")
}, {
"duration": 1.0,
"texture": ExtResource("11_dkmyy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Board" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_t8jgb")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
position_smoothing_enabled = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_u425y")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CanvasLayer1" type="CanvasLayer" parent="."]

[node name="GameControls" type="Control" parent="CanvasLayer1"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 1
script = ExtResource("3_m7ngt")

[node name="Active_player" type="Label" parent="CanvasLayer1/GameControls"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="Figure_Stats_Loc" type="GridContainer" parent="CanvasLayer1/GameControls"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -200.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
columns = 2

[node name="PFigureHealth" type="Label" parent="CanvasLayer1/GameControls/Figure_Stats_Loc"]
layout_mode = 2
text = "FIGURE1 HP:"

[node name="OFigureHealth" type="Label" parent="CanvasLayer1/GameControls/Figure_Stats_Loc"]
layout_direction = 3
layout_mode = 2
text = "FIGURE2 HP:"
horizontal_alignment = 2

[node name="PColorStats" type="Label" parent="CanvasLayer1/GameControls/Figure_Stats_Loc"]
layout_mode = 2

[node name="OColorStats" type="Label" parent="CanvasLayer1/GameControls/Figure_Stats_Loc"]
layout_mode = 2

[node name="PResources" type="Label" parent="CanvasLayer1/GameControls/Figure_Stats_Loc"]
layout_mode = 2

[node name="OResources" type="Label" parent="CanvasLayer1/GameControls/Figure_Stats_Loc"]
layout_mode = 2

[node name="CanvasLayer0" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enabled = true

[node name="Map" type="Sprite2D" parent="CanvasLayer0"]
z_as_relative = false
scale = Vector2(0.5, 0.5)
centered = false
script = ExtResource("3_fdc7p")

[node name="TileMap" type="TileMap" parent="CanvasLayer0/Map"]
format = 2

[node name="CanvasLayer-1" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="Sprite2D" parent="CanvasLayer-1"]
modulate = Color(0.215686, 0.215686, 0.215686, 1)
texture = ExtResource("4_nn24c")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1920, 1080)
script = ExtResource("5_u1twk")

[node name="Visuals" type="AnimatedSprite2D" parent="CanvasLayer-1/Background"]
visible = false
position = Vector2(456, 267)
scale = Vector2(0.830452, 0.330473)
sprite_frames = SubResource("SpriteFrames_0mdo0")
